alpm-types/src/snapshots/source::invalid_filename@case_1.snap
---
source: alpm-types/src/source.rs
---
error: invalid package artifact source
 | 
 | ./bikeshed_colour.patch
 | ^
 | 
 = note: File name (./bikeshed_colour.patch) contains invalid characters: /
